# packetc

./: Cargo.toml  README.md  TODO.md  format.md  test.pkt
.github/workflows/: ci.yml
benches/: codegen.rs  frontend.rs
integration/: Cargo.toml  README.md  test.pkt
integration/rust/: .gitignore  Cargo.toml
integration/rust/src/: lib.rs
integration/src/: main.rs
integration/ts/: .gitignore  package.json  tsconfig.json
integration/ts/src/: test.ts
packet_rs/: Cargo.toml  README.md
packet_rs/src/: lib.rs  reader.rs  writer.rs
packet_ts/: .gitignore  .travis.yml  README.md  package.json  rollup.config.js
packet_ts/src/: index.test.ts  index.ts  reader.test.ts  reader.ts  writer.test.ts  writer.ts
packetc/: Cargo.toml  LICENSE  README.md  format.md
packetc/resource/: test.pkt
packetc/src/: main.rs
packetc/src/lib/: ast.rs  check.rs  gen.rs  lib.rs  macros.rs  parser.rs
resource/: bench3KB.pkt  bench512KB.pkt  bench64KB.pkt  test.pkt
scripts/: gen_random_pkt.py
src/: main.rs
src/lib/: ast.rs  check.rs  lib.rs  parser.rs
