[package]
name = "packetc"
version = "0.1.0"
authors = ["jprochazk <honza.spacir@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = { version = "0.6.3" }
packet = { package = "packet_rs", path = "../packet_rs" }

[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "packetc"
path = "src/main.rs"